# MandelbrotSet

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  build.sh  run.sh
include/: mandelbrot_benchmark.h  mandelbrot_logic.h  mandelbrot_logic_array.h  mandelbrot_logic_basic.h  mandelbrot_logic_intrinsics.h  mandelbrot_start.h  mandelbrot_struct.h  mandelbrot_utils.h  screen_constants.h  tester.h
py_sources/: plots.py
source/: CMakeLists.txt  main.cpp  mandelbrot_benchmark.cpp  mandelbrot_logic.cpp  mandelbrot_logic_array.cpp  mandelbrot_logic_basic.cpp  mandelbrot_logic_intrinsics.cpp  mandelbrot_start.cpp  mandelbrot_utils.cpp  tester.cpp
